# GeoScope

./: .gitignore  CMakeLists.txt  GeoScopeMainWindow.cpp  GeoScopeMainWindow.h  GeoScopeMainWindow.ui  GeoScope_zh_CN.ts  README.md  main.cpp
Src/: main.cpp
Src/Algorithms/ConvexHull/: ConvexHull.cpp  ConvexHull.h
Src/Algorithms/Delaunay/: Delaunay.cpp
Src/Algorithms/Voronoi/: Voronoi.cpp  Voronoi.h
Src/Geometry/: FileParser.cpp  FileParser.h  Geometry.cpp  IGESParser.cpp  IGESParser.h  OBJParser.cpp  OBJParser.h  STEPParser.cpp  STEPParser.h
Src/Interaction/: Canvas.cpp  ControlsPanel.cpp  ControlsPanel.h
Src/Mesh/: MeshGenerator.cpp  MeshGenerator.h  MeshOptimizer.cpp  MeshOptimizer.h  MeshQuality.cpp  MeshQuality.h
Src/NURBS/: NURBSCurve.cpp  NURBSCurve.h  NURBSSurface.cpp  NURBSSurface.h  SurfaceFitting.cpp  SurfaceFitting.h
Src/Render/: BVH.cpp  BVH.h  RayTracer.cpp  RayTracer.h
Src/Utils/: ConfigLoader.cpp  ConfigLoader.h  MathHelpers.cpp  MathHelpers.h
